--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url "https://build.shibboleth.net/nexus/content/repositories/releases/"
+        }
     }
 }
 
